use record classes and refactor graph building for better composability