@@ -8,10 +8,9 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.Objects;
 import java.util.SortedMap;
 import java.util.TreeMap;
 import org.junit.jupiter.api.BeforeEach;
@@ -28,9 +27,10 @@ public class GraphBuilderTest {
     // Load custom config from YAML file
     Path configPath =
         new File(
-                getClass()
-                    .getClassLoader()
-                    .getResource("test-dependency-graph-config.yaml")
+                Objects.requireNonNull(
+                        getClass()
+                            .getClassLoader()
+                            .getResource("test-dependency-graph-config.yaml"))
                     .getFile())
             .toPath();
     GraphConfig customConfig = GraphConfig.load(configPath);
@@ -42,33 +42,32 @@ public class GraphBuilderTest {
     List<ZipkinSpanResponse> spans = new ArrayList<>();
     Graph graph = defaultGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).isEmpty();
-    assertThat(graph.edges).isEmpty();
+    assertThat(graph.nodes()).isEmpty();
+    assertThat(graph.edges()).isEmpty();
   }
 
   @Test
   void buildFromSpans_singleSpanWithoutParent_createsSingleNodeWithoutEdges() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-    ZipkinSpanResponse span =
-        createSpanWithTags(
-            "span1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app",
-                "app1",
-                "kube.namespace",
-                "ns1",
-                "kube.operation",
-                "op1",
-                "resource",
-                "res1"));
-    spans.add(span);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "span1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app",
+                    "app1",
+                    "kube.namespace",
+                    "ns1",
+                    "kube.operation",
+                    "op1",
+                    "resource",
+                    "res1")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    Node node = graph.nodes.get(0);
+    assertThat(graph.nodes()).hasSize(1);
+    Node node = graph.nodes().getFirst();
 
     // Verify the node ID matches the expected hash
     SortedMap<String, String> expectedMetadata =
@@ -81,498 +80,462 @@ public class GraphBuilderTest {
     String expectedId = Node.generateIdFromMetadata(expectedMetadata);
 
     assertThat(node.getId()).isEqualTo(expectedId);
-    assertThat(node.getMetadata().get("app")).isEqualTo("app1");
-    assertThat(node.getMetadata().get("namespace")).isEqualTo("ns1");
-    assertThat(node.getMetadata().get("operation")).isEqualTo("op1");
-    assertThat(node.getMetadata().get("resource")).isEqualTo("res1");
+    assertThat(node.getMetadata()).isEqualTo(expectedMetadata);
 
-    assertThat(graph.edges).isEmpty();
+    assertThat(graph.edges()).isEmpty();
   }
 
   @Test
   void buildFromSpans_parentChildSpans_createsNodesWithEdge() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-    ZipkinSpanResponse parentSpan =
-        createSpanWithTags(
-            "parent1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    ZipkinSpanResponse childSpan =
-        createSpanWithTags(
-            "child1",
-            "trace1",
-            "parent1",
-            Map.of(
-                "kube.app", "app2",
-                "kube.namespace", "ns2",
-                "kube.operation", "op2",
-                "resource", "res2"));
-
-    spans.add(parentSpan);
-    spans.add(childSpan);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "parent1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")),
+            TestUtils.createSpanWithTags(
+                "child1",
+                "trace1",
+                "parent1",
+                Map.of(
+                    "kube.app", "app2",
+                    "kube.namespace", "ns2",
+                    "kube.operation", "op2",
+                    "resource", "res2")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(2);
-    assertThat(graph.edges).hasSize(1);
+    assertThat(graph.nodes()).hasSize(2);
+    assertThat(graph.edges()).hasSize(1);
 
     // Generate expected node IDs using the static method
-    SortedMap<String, String> parentMetadata = new TreeMap<>();
-    parentMetadata.put("app", "app1");
-    parentMetadata.put("namespace", "ns1");
-    parentMetadata.put("operation", "op1");
-    parentMetadata.put("resource", "res1");
+    SortedMap<String, String> parentMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app1",
+                "namespace", "ns1",
+                "operation", "op1",
+                "resource", "res1"));
     String expectedParentId = Node.generateIdFromMetadata(parentMetadata);
 
-    SortedMap<String, String> childMetadata = new TreeMap<>();
-    childMetadata.put("app", "app2");
-    childMetadata.put("namespace", "ns2");
-    childMetadata.put("operation", "op2");
-    childMetadata.put("resource", "res2");
+    SortedMap<String, String> childMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app2",
+                "namespace", "ns2",
+                "operation", "op2",
+                "resource", "res2"));
     String expectedChildId = Node.generateIdFromMetadata(childMetadata);
-
-    Edge edge = graph.edges.iterator().next();
-    assertThat(edge.getSourceNodeId()).isEqualTo(expectedParentId);
-    assertThat(edge.getTargetNodeId()).isEqualTo(expectedChildId);
+    Edge edge = graph.edges().iterator().next();
+    assertThat(edge.sourceNodeId()).isEqualTo(expectedParentId);
+    assertThat(edge.targetNodeId()).isEqualTo(expectedChildId);
   }
 
   @Test
   void buildFromSpans_httpRequestSpan_usesCanonicalPathAsResource() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-    ZipkinSpanResponse span =
-        createSpanWithTags(
-            "span1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "http.request",
-                "resource", "original_resource",
-                "tag.operation.canonical_path", "/api/users"));
-    spans.add(span);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "span1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "http.request",
+                    "resource", "original_resource",
+                    "tag.operation.canonical_path", "/api/users")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    Node node = graph.nodes.get(0);
-
+    assertThat(graph.nodes()).hasSize(1);
+    Node node = graph.nodes().getFirst();
     assertThat(node.getMetadata().get("resource")).isEqualTo("/api/users");
-    assertThat(node.getMetadata().get("app")).isEqualTo("app1");
-    assertThat(node.getMetadata().get("namespace")).isEqualTo("ns1");
-    assertThat(node.getMetadata().get("operation")).isEqualTo("http.request");
   }
 
   @Test
   void buildFromSpans_httpRequestSpanWithoutCanonicalPath_usesOriginalResource() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    ZipkinSpanResponse span =
-        createSpanWithTags(
-            "span1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "http.request",
-                "resource", "original_resource"));
-    spans.add(span);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "span1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "http.request",
+                    "resource", "original_resource")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    Node node = graph.nodes.get(0);
+    assertThat(graph.nodes()).hasSize(1);
+    Node node = graph.nodes().getFirst();
     assertThat(node.getMetadata().get("resource")).isEqualTo("original_resource");
   }
 
   @Test
   void buildFromSpans_missingTags_usesDefaultValues() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    ZipkinSpanResponse span = createSpanWithTags("span1", "trace1", null, Map.of());
-    spans.add(span);
+    List<ZipkinSpanResponse> spans =
+        List.of(TestUtils.createSpanWithTags("span1", "trace1", null, Map.of()));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    Node node = graph.nodes.get(0);
+    assertThat(graph.nodes()).hasSize(1);
+    Node node = graph.nodes().getFirst();
 
-    SortedMap<String, String> expectedMetadata = new TreeMap<>();
-    expectedMetadata.put("app", "unknown_app");
-    expectedMetadata.put("namespace", "unknown_namespace");
-    expectedMetadata.put("operation", "unknown_operation");
-    expectedMetadata.put("resource", "unknown_resource");
+    SortedMap<String, String> expectedMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "unknown_app",
+                "namespace", "unknown_namespace",
+                "operation", "unknown_operation",
+                "resource", "unknown_resource"));
     String expectedId = Node.generateIdFromMetadata(expectedMetadata);
 
-    assertThat(node.getMetadata().get("app")).isEqualTo("unknown_app");
-    assertThat(node.getMetadata().get("namespace")).isEqualTo("unknown_namespace");
-    assertThat(node.getMetadata().get("operation")).isEqualTo("unknown_operation");
-    assertThat(node.getMetadata().get("resource")).isEqualTo("unknown_resource");
+    assertThat(node.getMetadata()).isEqualTo(expectedMetadata);
     assertThat(node.getId()).isEqualTo(expectedId);
   }
 
   @Test
   void buildFromSpans_spanWithNullId_skipsSpan() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    ZipkinSpanResponse validSpan =
-        createSpanWithTags(
-            "span1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    ZipkinSpanResponse invalidSpan = new ZipkinSpanResponse(null, "trace1");
-    invalidSpan.setTags(
-        Map.of(
-            "kube.app", "app2",
-            "kube.namespace", "ns2",
-            "kube.operation", "op2",
-            "resource", "res2"));
-
-    spans.add(validSpan);
-    spans.add(invalidSpan);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            // valid span
+            TestUtils.createSpanWithTags(
+                "span1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")),
+            // invalid span
+            TestUtils.createSpanWithTags(
+                null,
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app2",
+                    "kube.namespace", "ns2",
+                    "kube.operation", "op2",
+                    "resource", "res2")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    Node node = graph.nodes.get(0);
+    assertThat(graph.nodes()).hasSize(1);
+    Node node = graph.nodes().getFirst();
     assertThat(node.getMetadata().get("app")).isEqualTo("app1");
   }
 
   @Test
   void buildFromSpans_childSpanWithNonExistentParent_createsChildNodeWithoutEdge() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    ZipkinSpanResponse childSpan =
-        createSpanWithTags(
-            "child1",
-            "trace1",
-            "nonexistent_parent",
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    spans.add(childSpan);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "child1",
+                "trace1",
+                "nonexistent_parent",
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    assertThat(graph.edges).isEmpty();
+    assertThat(graph.nodes()).hasSize(1);
+    assertThat(graph.edges()).isEmpty();
   }
 
   @Test
   void buildFromSpans_duplicateNodes_deduplicatesNodes() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    // two spans that would create the same node
-    ZipkinSpanResponse span1 =
-        createSpanWithTags(
-            "span1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    ZipkinSpanResponse span2 =
-        createSpanWithTags(
-            "span2",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    spans.add(span1);
-    spans.add(span2);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            // two spans that would create the same node
+            TestUtils.createSpanWithTags(
+                "span1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")),
+            TestUtils.createSpanWithTags(
+                "span2",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
     // should only have one unique node
-    assertThat(graph.nodes).hasSize(1);
-    assertThat(graph.edges).isEmpty();
+    assertThat(graph.nodes()).hasSize(1);
+    assertThat(graph.edges()).isEmpty();
   }
 
   @Test
   void buildFromSpans_multipleChildrenSameParent_createsMultipleEdges() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    ZipkinSpanResponse parentSpan =
-        createSpanWithTags(
-            "parent1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    ZipkinSpanResponse child1Span =
-        createSpanWithTags(
-            "child1",
-            "trace1",
-            "parent1",
-            Map.of(
-                "kube.app", "app2",
-                "kube.namespace", "ns2",
-                "kube.operation", "op2",
-                "resource", "res2"));
-
-    ZipkinSpanResponse child2Span =
-        createSpanWithTags(
-            "child2",
-            "trace1",
-            "parent1",
-            Map.of(
-                "kube.app", "app3",
-                "kube.namespace", "ns3",
-                "kube.operation", "op3",
-                "resource", "res3"));
-
-    spans.add(parentSpan);
-    spans.add(child1Span);
-    spans.add(child2Span);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "parent1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")),
+            TestUtils.createSpanWithTags(
+                "child1",
+                "trace1",
+                "parent1",
+                Map.of(
+                    "kube.app", "app2",
+                    "kube.namespace", "ns2",
+                    "kube.operation", "op2",
+                    "resource", "res2")),
+            TestUtils.createSpanWithTags(
+                "child2",
+                "trace1",
+                "parent1",
+                Map.of(
+                    "kube.app", "app3",
+                    "kube.namespace", "ns3",
+                    "kube.operation", "op3",
+                    "resource", "res3")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(3);
-    assertThat(graph.edges).hasSize(2);
+    assertThat(graph.nodes()).hasSize(3);
+    assertThat(graph.edges()).hasSize(2);
 
-    SortedMap<String, String> parentMetadata = new TreeMap<>();
-    parentMetadata.put("app", "app1");
-    parentMetadata.put("namespace", "ns1");
-    parentMetadata.put("operation", "op1");
-    parentMetadata.put("resource", "res1");
+    SortedMap<String, String> parentMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app1",
+                "namespace", "ns1",
+                "operation", "op1",
+                "resource", "res1"));
     String expectedParentId = Node.generateIdFromMetadata(parentMetadata);
 
-    SortedMap<String, String> child1Metadata = new TreeMap<>();
-    child1Metadata.put("app", "app2");
-    child1Metadata.put("namespace", "ns2");
-    child1Metadata.put("operation", "op2");
-    child1Metadata.put("resource", "res2");
+    SortedMap<String, String> child1Metadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app2",
+                "namespace", "ns2",
+                "operation", "op2",
+                "resource", "res2"));
     String expectedChild1Id = Node.generateIdFromMetadata(child1Metadata);
 
-    SortedMap<String, String> child2Metadata = new TreeMap<>();
-    child2Metadata.put("app", "app3");
-    child2Metadata.put("namespace", "ns3");
-    child2Metadata.put("operation", "op3");
-    child2Metadata.put("resource", "res3");
+    SortedMap<String, String> child2Metadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app3",
+                "namespace", "ns3",
+                "operation", "op3",
+                "resource", "res3"));
     String expectedChild2Id = Node.generateIdFromMetadata(child2Metadata);
 
     // verify both edges have the same parent
-    Set<Edge> edges = graph.edges;
-    assertThat(edges.stream().allMatch(edge -> edge.getSourceNodeId().equals(expectedParentId)))
+    List<Edge> edges = graph.edges();
+    assertThat(edges.stream().allMatch(edge -> edge.sourceNodeId().equals(expectedParentId)))
         .isTrue();
 
     // verify different children
-    Set<String> childIds = Set.of(edges.stream().map(Edge::getTargetNodeId).toArray(String[]::new));
+    List<String> childIds = List.of(edges.stream().map(Edge::targetNodeId).toArray(String[]::new));
     assertThat(childIds).containsExactlyInAnyOrder(expectedChild1Id, expectedChild2Id);
   }
 
   @Test
   void buildFromSpans_duplicateEdges_deduplicatesEdges() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    ZipkinSpanResponse parentSpan =
-        createSpanWithTags(
-            "parent1",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "app1",
-                "kube.namespace", "ns1",
-                "kube.operation", "op1",
-                "resource", "res1"));
-
-    // two different child spans that reference the same parent
-    ZipkinSpanResponse child1Span =
-        createSpanWithTags(
-            "child1",
-            "trace1",
-            "parent1",
-            Map.of(
-                "kube.app", "app2",
-                "kube.namespace", "ns2",
-                "kube.operation", "op2",
-                "resource", "res2"));
-
-    // second span with same child node ID but different span ID - should create deduplicate edge
-    ZipkinSpanResponse child2Span =
-        createSpanWithTags(
-            "child2",
-            "trace1",
-            "parent1",
-            Map.of(
-                "kube.app", "app2",
-                "kube.namespace", "ns2",
-                "kube.operation", "op2",
-                "resource", "res2"));
-
-    spans.add(parentSpan);
-    spans.add(child1Span);
-    spans.add(child2Span);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            TestUtils.createSpanWithTags(
+                "parent1",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "app1",
+                    "kube.namespace", "ns1",
+                    "kube.operation", "op1",
+                    "resource", "res1")),
+            // two different child spans that reference the same parent
+            TestUtils.createSpanWithTags(
+                "child1",
+                "trace1",
+                "parent1",
+                Map.of(
+                    "kube.app", "app2",
+                    "kube.namespace", "ns2",
+                    "kube.operation", "op2",
+                    "resource", "res2")),
+            // second span with same child node ID but different span ID - should create deduplicate
+            // edge
+            TestUtils.createSpanWithTags(
+                "child2",
+                "trace1",
+                "parent1",
+                Map.of(
+                    "kube.app", "app2",
+                    "kube.namespace", "ns2",
+                    "kube.operation", "op2",
+                    "resource", "res2")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
     // should have 2 nodes (parent and child - child nodes are deduplicated)
-    assertThat(graph.nodes).hasSize(2);
+    assertThat(graph.nodes()).hasSize(2);
 
     // should have only 1 edge despite multiple spans creating the same parent-child relationship
-    assertThat(graph.edges).hasSize(1);
+    assertThat(graph.edges()).hasSize(1);
 
-    SortedMap<String, String> parentMetadata = new TreeMap<>();
-    parentMetadata.put("app", "app1");
-    parentMetadata.put("namespace", "ns1");
-    parentMetadata.put("operation", "op1");
-    parentMetadata.put("resource", "res1");
+    SortedMap<String, String> parentMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app1",
+                "namespace", "ns1",
+                "operation", "op1",
+                "resource", "res1"));
     String expectedParentId = Node.generateIdFromMetadata(parentMetadata);
 
-    SortedMap<String, String> childMetadata = new TreeMap<>();
-    childMetadata.put("app", "app2");
-    childMetadata.put("namespace", "ns2");
-    childMetadata.put("operation", "op2");
-    childMetadata.put("resource", "res2");
+    SortedMap<String, String> childMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "app2",
+                "namespace", "ns2",
+                "operation", "op2",
+                "resource", "res2"));
     String expectedChildId = Node.generateIdFromMetadata(childMetadata);
 
-    Edge edge = graph.edges.iterator().next();
-    assertThat(edge.getSourceNodeId()).isEqualTo(expectedParentId);
-    assertThat(edge.getTargetNodeId()).isEqualTo(expectedChildId);
+    Edge edge = graph.edges().getFirst();
+    assertThat(edge.sourceNodeId()).isEqualTo(expectedParentId);
+    assertThat(edge.targetNodeId()).isEqualTo(expectedChildId);
   }
 
   @Test
   void buildFromSpans_complexHierarchy_buildsCorrectGraph() {
-    List<ZipkinSpanResponse> spans = new ArrayList<>();
-
-    // root span
-    ZipkinSpanResponse rootSpan =
-        createSpanWithTags(
-            "root",
-            "trace1",
-            null,
-            Map.of(
-                "kube.app", "root_app",
-                "kube.namespace", "root_ns",
-                "kube.operation", "root_op",
-                "resource", "root_res"));
-
-    // first level children
-    ZipkinSpanResponse child1Span =
-        createSpanWithTags(
-            "child1",
-            "trace1",
-            "root",
-            Map.of(
-                "kube.app", "child1_app",
-                "kube.namespace", "child1_ns",
-                "kube.operation", "child1_op",
-                "resource", "child1_res"));
-
-    ZipkinSpanResponse child2Span =
-        createSpanWithTags(
-            "child2",
-            "trace1",
-            "root",
-            Map.of(
-                "kube.app", "child2_app",
-                "kube.namespace", "child2_ns",
-                "kube.operation", "child2_op",
-                "resource", "child2_res"));
-
-    // second level child
-    ZipkinSpanResponse grandchildSpan =
-        createSpanWithTags(
-            "grandchild",
-            "trace1",
-            "child1",
-            Map.of(
-                "kube.app",
-                "gc_app",
-                "kube.namespace",
-                "gc_ns",
-                "kube.operation",
-                "gc_op",
-                "resource",
-                "gc_res"));
-
-    spans.add(rootSpan);
-    spans.add(child1Span);
-    spans.add(child2Span);
-    spans.add(grandchildSpan);
+    List<ZipkinSpanResponse> spans =
+        List.of(
+            // root span
+            TestUtils.createSpanWithTags(
+                "root",
+                "trace1",
+                null,
+                Map.of(
+                    "kube.app", "root_app",
+                    "kube.namespace", "root_ns",
+                    "kube.operation", "root_op",
+                    "resource", "root_res")),
+            // first level children
+            TestUtils.createSpanWithTags(
+                "child1",
+                "trace1",
+                "root",
+                Map.of(
+                    "kube.app", "child1_app",
+                    "kube.namespace", "child1_ns",
+                    "kube.operation", "child1_op",
+                    "resource", "child1_res")),
+            TestUtils.createSpanWithTags(
+                "child2",
+                "trace1",
+                "root",
+                Map.of(
+                    "kube.app", "child2_app",
+                    "kube.namespace", "child2_ns",
+                    "kube.operation", "child2_op",
+                    "resource", "child2_res")),
+            // second level child
+            TestUtils.createSpanWithTags(
+                "grandchild",
+                "trace1",
+                "child1",
+                Map.of(
+                    "kube.app",
+                    "gc_app",
+                    "kube.namespace",
+                    "gc_ns",
+                    "kube.operation",
+                    "gc_op",
+                    "resource",
+                    "gc_res")));
 
     Graph graph = configuredGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(4);
-    assertThat(graph.edges).hasSize(3);
+    assertThat(graph.nodes()).hasSize(4);
+    assertThat(graph.edges()).hasSize(3);
 
-    SortedMap<String, String> rootMetadata = new TreeMap<>();
-    rootMetadata.put("app", "root_app");
-    rootMetadata.put("namespace", "root_ns");
-    rootMetadata.put("operation", "root_op");
-    rootMetadata.put("resource", "root_res");
+    SortedMap<String, String> rootMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "root_app",
+                "namespace", "root_ns",
+                "operation", "root_op",
+                "resource", "root_res"));
     String expectedRootId = Node.generateIdFromMetadata(rootMetadata);
 
-    SortedMap<String, String> child1Metadata = new TreeMap<>();
-    child1Metadata.put("app", "child1_app");
-    child1Metadata.put("namespace", "child1_ns");
-    child1Metadata.put("operation", "child1_op");
-    child1Metadata.put("resource", "child1_res");
+    SortedMap<String, String> child1Metadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "child1_app",
+                "namespace", "child1_ns",
+                "operation", "child1_op",
+                "resource", "child1_res"));
     String expectedChild1Id = Node.generateIdFromMetadata(child1Metadata);
 
-    SortedMap<String, String> child2Metadata = new TreeMap<>();
-    child2Metadata.put("app", "child2_app");
-    child2Metadata.put("namespace", "child2_ns");
-    child2Metadata.put("operation", "child2_op");
-    child2Metadata.put("resource", "child2_res");
+    SortedMap<String, String> child2Metadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "child2_app",
+                "namespace", "child2_ns",
+                "operation", "child2_op",
+                "resource", "child2_res"));
     String expectedChild2Id = Node.generateIdFromMetadata(child2Metadata);
 
-    SortedMap<String, String> grandchildMetadata = new TreeMap<>();
-    grandchildMetadata.put("app", "gc_app");
-    grandchildMetadata.put("namespace", "gc_ns");
-    grandchildMetadata.put("operation", "gc_op");
-    grandchildMetadata.put("resource", "gc_res");
+    SortedMap<String, String> grandchildMetadata =
+        new TreeMap<>(
+            Map.of(
+                "app", "gc_app",
+                "namespace", "gc_ns",
+                "operation", "gc_op",
+                "resource", "gc_res"));
     String expectedGrandchildId = Node.generateIdFromMetadata(grandchildMetadata);
 
-    Set<Edge> edges = graph.edges;
+    List<Edge> edges = graph.edges();
 
     // root -> child1
     assertThat(edges)
         .anyMatch(
             edge ->
-                edge.getSourceNodeId().equals(expectedRootId)
-                    && edge.getTargetNodeId().equals(expectedChild1Id));
+                edge.sourceNodeId().equals(expectedRootId)
+                    && edge.targetNodeId().equals(expectedChild1Id));
 
     // root -> child2
     assertThat(edges)
         .anyMatch(
             edge ->
-                edge.getSourceNodeId().equals(expectedRootId)
-                    && edge.getTargetNodeId().equals(expectedChild2Id));
+                edge.sourceNodeId().equals(expectedRootId)
+                    && edge.targetNodeId().equals(expectedChild2Id));
 
     // child1 -> grandchild
     assertThat(edges)
         .anyMatch(
             edge ->
-                edge.getSourceNodeId().equals(expectedChild1Id)
-                    && edge.getTargetNodeId().equals(expectedGrandchildId));
+                edge.sourceNodeId().equals(expectedChild1Id)
+                    && edge.targetNodeId().equals(expectedGrandchildId));
   }
 
   @Test
@@ -589,22 +552,8 @@ public class GraphBuilderTest {
 
     Graph graph = defaultGraphBuilder.buildFromSpans(spans);
 
-    assertThat(graph.nodes).hasSize(1);
-    Node node = graph.nodes.get(0);
+    assertThat(graph.nodes()).hasSize(1);
+    Node node = graph.nodes().getFirst();
     assertThat(node.getMetadata().get("service")).isEqualTo("test-service");
-  }
-
-  private ZipkinSpanResponse createSpanWithTags(
-      String id, String traceId, String parentId, Map<String, String> tags) {
-    ZipkinSpanResponse span = new ZipkinSpanResponse(id, traceId);
-    span.setParentId(parentId);
-    span.setTags(new HashMap<>(tags));
-
-    // Set up a default remote endpoint for configured tests
-    ZipkinEndpointResponse remoteEndpoint = new ZipkinEndpointResponse();
-    remoteEndpoint.setServiceName("default-service");
-    span.setRemoteEndpoint(remoteEndpoint);
-
-    return span;
   }
 }
